# Stilyx

./: .env  banco.db  category.py  complaint_router.py  config.py  database.py  dependecis.py  main.py  models.py  past_router.py  post_router.py  pyproject.toml  teste.py  user_router.py  verifications.py
alembic/: env.py
alembic/versions/: 068ad746d77a_adiciona_cascata.py  587e2bc430f9_estrutura_atual.py  786ade53d899_adiciona_administrador.py  97f66db3e936_init_atualizado.py  a0f016c57d21_pasta_atualizada.py  bd046562a612_estrutura_corrigida.py
stilyx/: main.py  pyproject.toml
